--- a/src/components/Projects/projectCard.css
+++ b/src/components/Projects/projectCard.css
@@ -1,4 +1,4 @@
-.container {
+.project-card-container {
   display: flex;
   flex-direction: row;
   height: 65vh;
@@ -85,7 +85,7 @@ a svg {
   grid-column: span 2 / span 2;
 }
 
-h1 {
+.project-card-title {
   margin-bottom: 10px;
 }
 
@@ -104,7 +104,7 @@ h1 {
     border-radius: 10px 10px 0 0;
   }
 
-  .container {
+  .project-card-container {
     flex-direction: column;
     height: auto;
     margin: 20px;
@@ -114,7 +114,7 @@ h1 {
     margin: 5px;
   }
 
-  h1 {
+  .project-card-title {
     margin: 10px;
   }
 }
